compileError.txt
src/lib_mso.c: In function ‘freeStack’:
src/lib_mso.c:84:31: error: invalid type argument of ‘->’ (have ‘Stack’ {aka ‘struct s_Stack’})
   84 |   Stack * stackTemp = (*stack)->prev;
      |                               ^~
In file included from main.c:8:
./lib/lib_eso.h:11:8: error: conflicting types for ‘div’
   11 | double div(double nbrA, double nbrB);
      |        ^~~
In file included from main.c:1:
/usr/include/stdlib.h:852:14: note: previous declaration of ‘div’ was here
  852 | extern div_t div (int __numer, int __denom)
      |              ^~~
main.c: In function ‘switchCases’:
main.c:36:11: error: too many arguments to function ‘sqr’
   36 |    return sqr(nbrA,nbrB);
      |           ^~~
In file included from main.c:8:
./lib/lib_eso.h:17:8: note: declared here
   17 | double sqr(double nbrA);
      |        ^~~
main.c:42:11: error: too many arguments to function ‘abst’
   42 |    return abst(nbrA,nbrB);
      |           ^~~~
In file included from main.c:8:
./lib/lib_eso.h:19:8: note: declared here
   19 | double abst(double nbrA);
      |        ^~~~
main.c: In function ‘choiceProcess’:
main.c:50:21: error: implicit declaration of function ‘strtok’; did you mean ‘strtoq’? [-Werror=implicit-function-declaration]
   50 |  int8_t * splited = strtok(stack, " ");
      |                     ^~~~~~
      |                     strtoq
main.c:50:21: error: initialization of ‘int8_t *’ {aka ‘signed char *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
main.c:62:26: error: pointer targets in passing argument 1 of ‘atof’ differ in signedness [-Werror=pointer-sign]
   62 |    push(&headStack, atof(stack));
      |                          ^~~~~
      |                          |
      |                          int8_t * {aka signed char *}
In file included from /usr/include/features.h:469,
                 from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33,
                 from /usr/include/stdlib.h:25,
                 from main.c:1:
/usr/include/x86_64-linux-gnu/bits/stdlib-float.h:25:1: note: expected ‘const char *’ but argument is of type ‘int8_t *’ {aka ‘signed char *’}
   25 | __NTH (atof (const char *__nptr))
      | ^~~~~
main.c:68:62: error: passing argument 1 of ‘pop’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   68 |    push(&headStack, switchCases(*stack, pop(&headStack), pop(headStack)));
      |                                                              ^~~~~~~~~
      |                                                              |
      |                                                              Stack * {aka struct s_Stack *}
In file included from main.c:9:
./lib/lib_mso.h:13:21: note: expected ‘Stack **’ {aka ‘struct s_Stack **’} but argument is of type ‘Stack *’ {aka ‘struct s_Stack *’}
   13 | double pop(Stack ** stack);
      |            ~~~~~~~~~^~~~~
main.c:73:11: error: assignment to ‘int8_t *’ {aka ‘signed char *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   73 |   splited = strtok(NULL, " \0");
      |           ^
main.c: At top level:
main.c:84:5: error: second argument of ‘main’ should be ‘char **’ [-Werror=main]
   84 | int main(int32_t argc, int8_t *argv[]){
      |     ^~~~
main.c: In function ‘main’:
main.c:106:8: error: pointer targets in passing argument 1 of ‘fgets’ differ in signedness [-Werror=pointer-sign]
  106 |  fgets(stack, sizeof(int8_t) * 512, stdin) ;
      |        ^~~~~
      |        |
      |        int8_t * {aka signed char *}
In file included from /usr/include/stdio.h:866,
                 from main.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:262:25: note: expected ‘char * restrict’ but argument is of type ‘int8_t *’ {aka ‘signed char *’}
  262 | fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
      |        ~~~~~~~~~~~~~~~~~^~~
main.c:84:32: error: unused parameter ‘argv’ [-Werror=unused-parameter]
   84 | int main(int32_t argc, int8_t *argv[]){
      |                        ~~~~~~~~^~~~~~
main.c: In function ‘switchCases’:
main.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
main.c: In function ‘main’:
main.c:103:2: error: ignoring return value of ‘system’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
  103 |  system("clear");
      |  ^~~~~~~~~~~~~~~
main.c:106:2: error: ignoring return value of ‘fgets’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
  106 |  fgets(stack, sizeof(int8_t) * 512, stdin) ;
      |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
